src/objects/Limit_Logger_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Auto_Commit_When_Initial_Is_Stopped__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Auto commit the logs when the initial log is stopped. Without this being set to true, you must call the &quot;commitAll&quot; method in order to commit the logs.</description>
        <inlineHelpText>Auto commit the logs when the initial log is stopped. Without this being set to true, you must call the &quot;commitAll&quot; method in order to commit the logs.</inlineHelpText>
        <label>Auto Commit When Initial Is Stopped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commit_Logs_To_Database__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the Limit Logs are committed to the Limit Log object. Can also be programmatically set via LimitLogger.commitLogs = true</description>
        <inlineHelpText>Determines if the Limit Logs are committed to the Limit Log object. Can also be programmatically set via LimitLogger.commitLogs = true</inlineHelpText>
        <label>Commit Logs To Database</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debug_Limits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the Limit Logs are printed in the debug logs. Can also be programmatically set via LimitLogger.debugLogs = true</description>
        <inlineHelpText>Determines if the Limit Logs are printed in the debug logs. Can also be programmatically set via LimitLogger.debugLogs = true</inlineHelpText>
        <label>Debug Limits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Wrapper_Relationships_Between_Logs__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The wrapper relationship sets parent child relationships between the log limits. This will consume an extra DML statement and the corresponding number of DML rows.</description>
        <inlineHelpText>The wrapper relationship sets parent child relationships between the log limits. This will consume an extra DML statement and the corresponding number of DML rows.</inlineHelpText>
        <label>Set Wrapper Relationships Between Logs</label>
        <type>Checkbox</type>
    </fields>
    <label>Limit Logger Settings</label>
</CustomObject>